[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/wheel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Wheel.gd" type="Script" id=2]
[ext_resource path="res://Sprites/shine_layer2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/shine_bg.png" type="Texture" id=4]
[ext_resource path="res://Sprites/shine_layer1.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0167

[node name="Wheel" type="Node2D"]
script = ExtResource( 2 )

[node name="ShineBg" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="ShineLayer1" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
offset = Vector2( 3.33333, 3.33333 )

[node name="ShineLayer2" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="WheelSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.556863, 0.294118, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )
